fixed button appearence on ios

--- a/docs/style.css
+++ b/docs/style.css
@@ -679,6 +679,7 @@ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: 0;
     align-self: center;
     margin-bottom: 20px;
+    background-color: lightgray;
     width: auto;
     height: auto;
 padding: 10px;
